# microaxum

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-09-07-100213_init/: up.sql
src/: app.rs  auth.rs  error.rs  main.rs  schema.rs
src/api/users/: route.rs
src/db/: mod.rs  record.rs
src/db/models/: users.rs
