[package]
name = "microaxum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
deadpool = "0.12.3"
diesel = { version = "2.2.12", features = ["postgres", "serde_json"] }
diesel-async = { version = "0.6.1", features = ["deadpool", "postgres"] }
dotenvy = "0.15.7"
hyper = "1.7.0"
jiff = { version = "0.2.15", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.143"
serde_with = "3.14.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
